--- a/u19253738_HW06/Views/products/Create.cshtml
+++ b/u19253738_HW06/Views/products/Create.cshtml
@@ -4,14 +4,18 @@
     ViewBag.Title = "Create";
 }
 
+@{
+    Layout = null;
+}
+
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
+
+    <div class="form-horizontal"  onsubmit="return insertAjaxPost(this)">
         <h4>product</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -63,9 +67,14 @@
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+
+
+
+
+
+@*<div>
+        @Html.ActionLink("Back to List", "Index")
+    </div>*@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
