--- a/u19253738_HW06/Views/Shared/_Layout.cshtml
+++ b/u19253738_HW06/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Product", "Index", "products")</li>
-                    <li>@Html.ActionLink("Orders", "About", "Home")</li>
+                    <li>@Html.ActionLink("Orders", "Index", "Orders")</li>
                     <li>@Html.ActionLink("Report", "Contact", "Home")</li>
                 </ul>
             </div>
@@ -46,8 +46,7 @@
                     <p>Modal body text goes here.</p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                   
                 </div>
             </div>
         </div>
