--- a/u19253738_HW06/Views/products/Edit.cshtml
+++ b/u19253738_HW06/Views/products/Edit.cshtml
@@ -15,7 +15,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>product</h4>
+        @*<h4>product</h4>*@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.product_id)
