--- a/u19253738_HW06/Views/products/Information.cshtml
+++ b/u19253738_HW06/Views/products/Information.cshtml
@@ -1,10 +1,10 @@
 ﻿@model u19253738_HW06.Models.stock
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Information";
 }
 
-<h2>Details</h2>
+<h2>Information</h2>
 
 <div>
     <h4>stock</h4>
